--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,13 @@
 		<div class="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+
+		<div>
+			<p>
+				Je m'appelle Kenny
+				J'ai 22 ans
+			</p>
+		</div>
 		
 	
 </body></html>
