--- a/hello.html
+++ b/hello.html
@@ -17,12 +17,21 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+		<!-- Description -->
 		<div>
+			<h1>MA DESCRIPTION</h1>
 			<p>
 				Je m'appelle Kenny
 				J'ai 22 ans
 			</p>
 		</div>
 		
+				<!-- RTecompene -->
+				<div>
+					<h1>MA Recompense</h1>
+					<p>
+					En construction
+					</p>
+				</div>
 	
 </body></html>
